--- a/index.html
+++ b/index.html
@@ -1,259 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Cuntfucker9000 Meme Dump</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <title>EY9000 Meme Hub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    :root {
-      --bg: #050608;
-      --card-bg: #111318;
-      --accent: #ff3366;
-      --accent-soft: rgba(255, 51, 102, 0.16);
-      --text-main: #f5f5f5;
-      --text-muted: #888ca0;
-      --border-subtle: #1c1f27;
+    body { 
+      background: #0d0d0d; 
+      color: #fff; 
+      font-family: Arial, sans-serif; 
+      margin: 0; 
     }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+    h1 { 
+      text-align: center; 
+      margin-top: 30px; 
+      font-size: 42px;
     }
-
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-      background: radial-gradient(circle at top, #151827 0, #050608 55%);
-      color: var(--text-main);
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      padding: 24px 16px 8px;
-      text-align: center;
-    }
-
-    .badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      padding: 4px 10px;
-      border-radius: 999px;
-      border: 1px solid var(--accent-soft);
-      background: rgba(0, 0, 0, 0.35);
-      color: var(--accent);
-      margin-bottom: 12px;
-    }
-
-    h1 {
-      font-size: clamp(32px, 5vw, 42px);
-      letter-spacing: 0.04em;
-      margin-bottom: 8px;
-    }
-
-    .tagline {
-      font-size: 14px;
-      color: var(--text-muted);
-      max-width: 480px;
-      margin: 0 auto 20px;
-    }
-
-    .toolbar {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 12px;
-      padding: 0 16px 24px;
-    }
-
-    .chip {
-      padding: 6px 12px;
-      border-radius: 999px;
-      font-size: 12px;
-      border: 1px solid var(--border-subtle);
-      color: var(--text-muted);
-      cursor: default;
-    }
-
-    .chip.primary {
-      border-color: var(--accent);
-      background: var(--accent-soft);
-      color: var(--accent);
-    }
-
-    main {
-      flex: 1;
-      padding: 0 16px 32px;
-      max-width: 1100px;
-      margin: 0 auto;
-      width: 100%;
-    }
-
     .grid {
+      padding: 20px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 16px;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
     }
-
-    .card {
-      background: linear-gradient(145deg, #10121a 0%, #070811 100%);
-      border-radius: 14px;
-      border: 1px solid var(--border-subtle);
-      overflow: hidden;
-      box-shadow: 0 14px 35px rgba(0, 0, 0, 0.7);
-      display: flex;
-      flex-direction: column;
-      position: relative;
-    }
-
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(circle at top, rgba(255, 51, 102, 0.1), transparent 60%);
-      opacity: 0;
-      transition: opacity 0.25s ease-out;
-      pointer-events: none;
-    }
-
-    .card:hover::before {
-      opacity: 1;
-    }
-
-    .card img {
-      display: block;
+    .grid img {
       width: 100%;
-      height: auto;
+      border-radius: 10px;
+      border: 2px solid #333;
     }
-
-    .card-body {
-      padding: 10px 12px 12px;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    .card-title {
-      font-size: 13px;
-      font-weight: 500;
-    }
-
-    .card-meta {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 11px;
-      color: var(--text-muted);
-      margin-top: 2px;
-    }
-
-    .pill {
-      padding: 3px 8px;
-      border-radius: 999px;
-      border: 1px solid var(--border-subtle);
-      font-size: 10px;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-    }
-
     footer {
       text-align: center;
-      padding: 16px 12px 24px;
-      font-size: 12px;
-      color: var(--text-muted);
-      border-top: 1px solid #10121a;
-      background: radial-gradient(circle at bottom, #121420 0, #050608 60%);
-    }
-
-    footer span {
-      color: var(--accent);
-    }
-
-    @media (max-width: 600px) {
-      header {
-        padding-top: 20px;
-      }
-      .toolbar {
-        padding-bottom: 18px;
-      }
+      padding: 20px;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="badge">CF9000 · UNFILTERED MEME CACHE</div>
-    <h1>Cuntfucker9000</h1>
-    <p class="tagline">
-      Static, fast-as-hell meme dump. No algorithm. No feed. Just cursed pixels
-      on a CDN.
-    </p>
-  </header>
 
-  <div class="toolbar">
-    <div class="chip primary">Trending</div>
-    <div class="chip">Cursed</div>
-    <div class="chip">Wholesome</div>
-    <div class="chip">Screenshots</div>
-    <div class="chip">Deep-fried</div>
+  <h1>EY9000 MEME GRID</h1>
+
+  <div class="grid">
+    <img src="images/meme1.jpg">
+    <img src="images/meme2.jpg">
+    <img src="images/meme3.jpg">
+    <img src="images/meme4.jpg">
   </div>
 
-  <main>
-    <div class="grid">
-      <!-- Replace image filenames with your actual memes in /images -->
-      <div class="card">
-        <img src="images/meme1.jpg" alt="Meme 1" />
-        <div class="card-body">
-          <div class="card-title">When GitHub Pages finally works</div>
-          <div class="card-meta">
-            <span>00:01 upload ago</span>
-            <span class="pill">core dump</span>
-          </div>
-        </div>
-      </div>
+  <footer>© EY9000 · Meme Hub</footer>
 
-      <div class="card">
-        <img src="images/meme2.jpg" alt="Meme 2" />
-        <div class="card-body">
-          <div class="card-title">DNS propagation be like</div>
-          <div class="card-meta">
-            <span>up since forever</span>
-            <span class="pill">network</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="images/meme3.jpg" alt="Meme 3" />
-        <div class="card-body">
-          <div class="card-title">Config works in prod only</div>
-          <div class="card-meta">
-            <span>legendary</span>
-            <span class="pill">devops</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="images/meme4.jpg" alt="Meme 4" />
-        <div class="card-body">
-          <div class="card-title">404: brain not found</div>
-          <div class="card-meta">
-            <span>classic</span>
-            <span class="pill">throwback</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <footer>
-    © <span>CF9000</span> · Static memes, zero JavaScript, zero mercy.
-  </footer>
 </body>
 </html>
