--- a/index.html
+++ b/index.html
@@ -2,76 +2,104 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EY9000 Meme Grid</title>
+  <title>EY9000 MEME FEED</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
     body {
       background: #0d0d0d;
       color: #fff;
       font-family: Arial, sans-serif;
       margin: 0;
+      padding: 0;
     }
+
     h1 {
       text-align: center;
-      margin-top: 30px;
-      font-size: 42px;
-      letter-spacing: 2px;
+      padding: 20px 0;
+      font-size: 32px;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
     }
-    .grid {
-      padding: 20px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-    }
-    .grid img {
+
+    .feed {
       width: 100%;
-      border-radius: 10px;
-      border: 2px solid #333;
-      background: #111;
-      object-fit: contain;
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 20px;
+      padding-bottom: 80px;
     }
+
+    .meme {
+      width: 100%;
+      margin-bottom: 25px;
+      border-radius: 12px;
+      overflow: hidden;
+      background: #111;
+      border: 2px solid #222;
+      box-shadow: 0 0 10px #0008;
+    }
+
+    .meme img {
+      width: 100%;
+      display: block;
+    }
+
     footer {
       text-align: center;
       padding: 20px;
       color: #777;
-      margin-top: 40px;
+      font-size: 14px;
     }
   </style>
 </head>
 
 <body>
 
-<h1>EY9000 MEME GRID</h1>
-<div class="grid" id="memeGrid"></div>
+  <h1>EY9000 MEME FEED</h1>
 
-<footer>© EY9000 · Meme Hub</footer>
+  <div class="feed" id="memeFeed"></div>
 
-<script>
-(async () => {
-  const folder = "images/";
-  const grid = document.getElementById("memeGrid");
+  <footer>© EY9000 · Meme Hub</footer>
 
-  // GitHub Pages does not allow directory listing,
-  // BUT we can fetch the GitHub API to list files automatically.
-  const apiUrl = "https://api.github.com/repos/deckieSec/ey9000/contents/images";
+  <script>
+    (async () => {
+      const folder = "images/";
+      const feed = document.getElementById("memeFeed");
 
-  // Fetch list of files from GitHub
-  const res = await fetch(apiUrl);
-  const files = await res.json();
+      // GitHub API to list your /images files
+      const apiUrl = "https://api.github.com/repos/deckieSec/ey9000/contents/images";
 
-  // Filter image files
-  const images = files.filter(f => 
-    f.name.match(/\.(jpg|jpeg|png|webp|gif)$/i)
-  );
+      try {
+        const res = await fetch(apiUrl);
+        const files = await res.json();
 
-  // Generate grid
-  images.forEach(img => {
-    const el = document.createElement("img");
-    el.src = folder + img.name;
-    grid.appendChild(el);
-  });
-})();
-</script>
+        // Filter image files
+        let images = files.filter(f =>
+          f.name.match(/\.(jpg|jpeg|png|webp|gif)$/i)
+        );
+
+        // Randomize order each refresh
+        images = images.sort(() => Math.random() - 0.5);
+
+        // Add each meme to the feed
+        images.forEach(img => {
+          const box = document.createElement("div");
+          box.className = "meme";
+
+          const image = document.createElement("img");
+          image.src = folder + img.name;
+
+          box.appendChild(image);
+          feed.appendChild(box);
+        });
+
+      } catch (e) {
+        console.error("Error loading memes:", e);
+        feed.innerHTML = "<p style='text-align:center;color:#f44'>Error loading memes.</p>";
+      }
+    })();
+  </script>
 
 </body>
 </html>
