--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
   </div>
 
-  <footer>Drop new images into <code>/images</code> · They auto-join the loop</footer>
+  <footer>Memes <code>/images</code>· Woo hoo</footer>
 
   <script>
     (async () => {
